# courses

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
LLM/: pdf_summarizer.ipynb  pyproject.toml
ML/: pyproject.toml
ML/data/: penguins_lter.csv
ML/data/functional_model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
ML/data/functional_model/variables/: variables.data-00000-of-00001  variables.index
ML/hands_on_ml/: toy_keras.py
ML/hands_on_ml/model/: checkpoint  functional_model.data-00000-of-00001  functional_model.index
ML/hands_on_ml/model/functional_model/: fingerprint.pb  saved_model.pb
ML/hands_on_ml/model/functional_model/variables/: variables.data-00000-of-00001  variables.index
ML/hands_on_ml/tensorboard_logs/functional_model/plugins/profile/2023_06_09_17_06_39/: ca-mbp-arthur.xplane.pb
ML/hands_on_ml/tensorboard_logs/functional_model/train/: events.out.tfevents.1686344796.ca-mbp-arthur.32321.0.v2
ML/hands_on_ml/tensorboard_logs/functional_model/validation/: events.out.tfevents.1686344797.ca-mbp-arthur.32321.1.v2
ML/sklearn/: sklearn_course.ipynb
NLP/: pyproject.toml
NLP/nlp_with_transformers/: text_classification.ipynb
mlops-course/: .pre-commit-config.yaml  pyproject.toml
mlops-course/notebooks/: foundations.ipynb  tagifai.ipynb  utils.py
nano-gpt/: gpt-dev.ipynb  pyproject.toml
