[tool.poetry]
name = "llm"
version = "0.1.0"
description = "Env for LLM experiments"
authors = ["arthur"]

[tool.poetry.dependencies]
python = "~3.10"
jupyterlab = "^3.2.8"
langchain = "^0.0.142"
openai = "^0.27.4"
llama-index = "^0.5.21"
pytesseract = "^0.3.10"
pypdf = "^3.8.0"
python-dotenv = "^1.0.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
