[tool.poetry]
name = "ml"
version = "0.1.0"
description = "Env for ML/DL courses"
authors = ["arthur"]

[tool.poetry.dependencies]
python = "~3.10"
jupyterlab = "^3.2.8"
scikit-learn = "^1.1.2"
pandas = "^1.4.3"
tqdm = "^4.64.0"
seaborn = "^0.11.2"
optuna = "^2.10.1"
plotly = "^5.10.0"
jupyter-dash = "^0.4.2"
ipywidgets = "^8.0.1"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
