[tool.poetry]
name = "mlops-course"
version = "0.1.0"
description = "MadeWithML course"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "~3.10"
jupyterlab = "^3.4.7"
torch = "^1.12.1"
numpy = "^1.23.3"
pandas = "^1.5.0"
torchvision = "^0.13.1"
pydantic = "^1.10.2"
ipywidgets = "^8.0.2"
seaborn = "^0.12.0"
wordcloud = "^1.8.2"
nltk = "^3.7"
scikit-learn = "^1.1.2"

[tool.poetry.dev-dependencies]
ipykernel = "^6.15.3"
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
