[tool.poetry]
name = "nano-gpt"
version = "0.1.0"
description = "build gpt from scratch"
authors = ["arthur"]

[tool.poetry.dependencies]
python = "~3.10"
jupyterlab = "^3.2.8"
torch = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
